fix spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .sc-connectAccounts {
 	display: flex;
 	overflow-x: auto;
+	margin-bottom: 11px;
 }
 
 .sc-connection {
